--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-overdrive": "0.0.10",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
+    "react-spring": "^8.0.27",
     "styled-components": "^5.0.1"
   },
   "scripts": {
